新增编码规范

--- a/代码规范.md
+++ b/代码规范.md
@@ -10,11 +10,9 @@
 
 ​	命名空间：根据目录结构来进行定义。
 
-​	注释信息：需要标有文件相关信息。如：作者，编码时间，文件描述。
+​	类名：采用**大驼峰**方式，单词应简单易懂。
 
-​	类名：采用大驼峰方式，单词应简单易懂。
-
-​	变量：采用小驼峰方式，单词应简单易懂。
+​	变量：采用**小驼峰**方式，单词应简单易懂。
 
 #### 1.2 文件编码
 
@@ -25,4 +23,48 @@
 1. tab键为4个空格。
 2. 编码遵照psr4标准
 
-  ​
+#### 1.4 注释信息
+
+​	1.文件注释：
+
+ 		作者，编码时间，文件描述。
+
+​    	2.方法注释：
+
+​		作者，编辑时间，版本信息，参数注释，返回信息注释，函数功能注释
+
+​		常用标签：[@package](https://phpdoc.org/docs/latest/references/phpdoc/tags/package.html)、[@var](https://phpdoc.org/docs/latest/references/phpdoc/tags/var.html)、[@param](https://phpdoc.org/docs/latest/references/phpdoc/tags/param.html)、[@return](https://phpdoc.org/docs/latest/references/phpdoc/tags/return.html)、[@author](https://phpdoc.org/docs/latest/references/phpdoc/tags/author.html)、[@todo](https://phpdoc.org/docs/latest/references/phpdoc/tags/todo.html)、[@throws](https://phpdoc.org/docs/latest/references/phpdoc/tags/throws.html) 
+
+#### 1.5 业务模块
+
+​	1.Model层，只做简单的数据表的查询。
+
+​	2.业务逻辑统一封装到Service层。
+
+​	3.控制层只做URL路由，不要写SQL操作方法。
+
+#### 1.6 命名规范（Namespace）与 导入（Use）声明
+
+ 	1.命名空间声明在**<?php**行后，并且后面必须有一行空行。
+
+​	2.所有的导入（Use）声明必须放在命名空间声明的下面。
+
+​	3.一句声明中，只能有一个导入（Use）关键字
+
+​	4.导入声明代码块后面必须有一行空行。
+
+#### 1.7 数组的书写格式
+
+​	只有一个键值对时，就写成一行
+
+​		`$arr = array('id' => 100);`
+
+​	有多个键值对时，就换行
+
+​		`$arr = array(`
+
+​			'id'	=> 100,
+
+​			'name'	=> 	'hello'
+
+​		`)；`
